# rpg_rust

./: .gitignore  Cargo.toml  README.md
assets/: test_dialogue.txt
src/: animator.rs  collectibles.rs  collisions.rs  components.rs  dialoguebox.rs  keyboard.rs  main.rs  physics.rs  randomwalker.rs  renderer.rs  update_interaction.rs
src/components/: interactable_objects.rs
