[package]
name = "sdl-test"
version = "0.1.0"
authors = ["Per Edwardsson <per@peredwardsson.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.16.1"
specs-derive = "0.4.1"
rand = "0.7.3"
shred = "0.10.2"
shred-derive = "0.6.2"
noise = "0.6.0"
regex = "1.3.9"

[dependencies.sdl2]
version = "0.34.2"
default-features = false
features = ["image", "ttf"]